--- a/waifu.css
+++ b/waifu.css
@@ -5,8 +5,8 @@
 	color: #fff;
 	cursor: pointer;
 	font-size: 12px;
-	left: 0;
-	margin-left: -100px;
+	right: 0;
+	margin-right: -100px;
 	padding: 5px 2px 5px 5px;
 	position: fixed;
 	transition: margin-left 1s;
@@ -19,12 +19,12 @@
 }
 
 #waifu-toggle.waifu-toggle-active:hover {
-	margin-left: -30px;
-}
+	margin-right: -30px;
+} 
 
 #waifu {
 	bottom: -1000px;
-	left: 0;
+	right: 0;
 	line-height: 0;
 	margin-bottom: -10px;
 	position: fixed;
